Change log for duff
===================

Started as of version 0.3.1.

2006-09-29  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c (main) (usage): Added -0 option (credits to Clemens Lucas Fries).
 * duff.c (read_path): Added function.
 * duffdriver.c (report_clusters): Added -0 option (credits to Clemens Lucas Fries).
 * duffutil.c (print_cluster_header): Removed newline termination.

2006-01-11  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duffdriver.c (stat_file): Added parenthesis to remove warning.

2006-01-09  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.h (copy_entry): Removed unused function.
 * duffentry.c (copy_entry): Removed unused function.

 * duffdriver.c (process_path): Only check access for non-empty files.
 * duffentry.c (get_entry_samples)
   (get_entry_checksum): Only open and read from non-empty files.

 * join-duplicates.sh: Removed logging, added some error checking and mktemp.

2006-01-08  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * join-duplicates.sh: Added file (credits to Ross Newell).

2006-01-07  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duffentry.c (get_entry_samples): Fixed seek bug (credits to Alexander Bostrom).

 * duffdriver.c (stat_file): Removed collection of symlinks to files.

 * duff.h: Added enum for symlink dereferencing modes.
 * duffdriver.c (stat_file): Implemented symlink dereferencing modes.
 * duffdriver.c (process_path, recurse_directory)
   (stat_file): Added recursion depth tracking.
 * duff.c (main, usage): Added -H option for following only symlinks listed as arguments.

 * duff.c (main): Reordered options for better clarity.

 * duff.c (main): Improved warnings for -l option.

2006-01-04  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duffentry.c (compare_entries): Removed code for -z option.
 * duffdriver.c (stat_file): Do not collect empty files when using -z option.

 * duffdriver.c (report_clusters): Fixed unlink bug.